--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.1"
+    "react-native": "0.66.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-redash": "^16.2.2",
+    "react-dom": "16.9.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-svg": "11.0.1",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.0.6",
+    "react-navigation-stack": "^1.9.0",
+    "use-memo-one": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -21,7 +30,10 @@
     "eslint": "^8.1.0",
     "jest": "^27.3.1",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^3.8.3",
+    "eslint-config-react-native-wcandillon": "3.3.3",
+    "patch-package": "^6.1.2"
   },
   "jest": {
     "preset": "react-native"
